--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,7 +7,13 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:ssr": "node dist/server/main.js",
+    "build:ssr": "ng build --prod && ng run front-end:server:production",
+    "build:client-and-server-bundles": "ng build --prod && ng run front-end:server:production",
+    "dev:ssr": "ng run front-end:serve-ssr",
+    "prerender": "ng run front-end:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,18 +24,23 @@
     "@angular/forms": "~9.1.9",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
+    "@angular/platform-server": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@nguniversal/express-engine": "9.1.1",
+    "express": "^4.15.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/cli": "~9.1.7",
+    "@angular/cli": "~9.1.9",
     "@angular/compiler-cli": "~9.1.9",
-    "@types/node": "^12.11.1",
+    "@nguniversal/builders": "^9.1.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
